Added welcome screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,11 @@
             android:exported="false"
             android:theme="@style/Theme.DragonLauncher" />
 
+        <activity
+            android:name=".WelcomeActivity"
+            android:exported="false"
+            android:theme="@style/Theme.DragonLauncher" />
+
 
         <service
             android:name=".services.SystemControlService"
