Working auto keyboard, idk why, trying to clean up code and make the drawer clean

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
 
         <activity
             android:name=".MainActivity"
+            android:windowSoftInputMode="stateAlwaysHidden"
             android:exported="true"
             android:theme="@style/Theme.DragonLauncher">
 
