--- a/.github/workflows/release-on-tag.yml
+++ b/.github/workflows/release-on-tag.yml
@@ -20,6 +20,27 @@ jobs:
         run: |
           TAG="${GITHUB_REF#refs/tags/}"
           echo "VERSION=$TAG" >> $GITHUB_ENV
+          
+
+      - name: Read changelog file
+        id: changelog
+        run: |
+          CHANGELOG_FILE="fastlane/metadata/android/en-US/changelogs/${{ env.VERSION_CODE }}.txt"
+          
+          if [ -f "$CHANGELOG_FILE" ]; then
+            # Parse format: first line=version, rest=changes (comma or * separated)
+            VERSION_NAME=$(head -n 1 "$CHANGELOG_FILE")
+            CHANGES=$(tail -n +2 "$CHANGELOG_FILE" | sed 's/^[ *]//g' | sed ':a;N;$!ba;s/,\n/\n/g' | sed 's/^/• /' | sed 's/$/\n/')
+          
+            # Format as markdown
+            FORMATTED="## $VERSION_NAME\n\n$CHANGES"
+            echo "changelog<<EOF" >> $GITHUB_OUTPUT
+            echo "$FORMATTED" >> $GITHUB_OUTPUT
+            echo "EOF" >> $GITHUB_OUTPUT
+            echo "has_changelog=true" >> $GITHUB_OUTPUT
+          else
+            echo "has_changelog=false" >> $GITHUB_OUTPUT
+          fi
 
       - name: Set up JDK
         uses: actions/setup-java@v4
@@ -52,6 +73,7 @@ jobs:
         with:
           tag_name: ${{ env.VERSION }}
           name: ${{ env.VERSION }}
+          body: ${{ steps.changelog.outputs.changelog }}
           files: ${{ env.APK }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
