Updated metadata, fixed wrong file names and updated workflow run to not compile on metadata change

--- a/metadata/org.elnix.dragonlauncher.yml
+++ b/metadata/org.elnix.dragonlauncher.yml
@@ -2,6 +2,7 @@ Categories:
   - System
 License: MIT
 AuthorName: Elnix90
+AuthorEmail: elnix91@gmail.com
 SourceCode: https://github.com/Elnix90/Dragon-Launcher
 IssueTracker: https://github.com/Elnix90/Dragon-Launcher/issues
 Changelog: https://github.com/Elnix90/Dragon-Launcher/releases
