--- a/.github/workflows/pre-release_on-push.yml
+++ b/.github/workflows/pre-release_on-push.yml
@@ -4,11 +4,18 @@ on:
   push:
     branches:
       - main
-    paths-ignore:
-      - fastlane/**
-      - README.md
-      - TODO.md
-      - metadata/**
+    paths:
+        - 'app/**'
+        - 'build.gradle**'
+        - 'gradle/**'
+        - '**.kt'
+        - '**.kts'
+        - '**.java'
+#    paths-ignore:
+#      - fastlane/**
+#      - README.md
+#      - TODO.md
+#      - metadata/**
 
 jobs:
   build:
