[MEGA FEAT] Implemented the circles nest feature, corrected lots of bugs, improved graphical everywhere, fixed app crash on new versions upgrading (#37), fiwed crash when app isn't default launcher, and tries to fetch app shortcuts, added hability to add / remove circles for each circle nest, added more precise debugging, closes #37,closes #38, closes #35, closes #20, closes #15

--- a/.github/workflows/pre-release_on-push.yml
+++ b/.github/workflows/pre-release_on-push.yml
@@ -51,7 +51,7 @@ jobs:
         with:
           timeout_minutes: 10
           max_attempts: 3
-          command: ./gradlew assembleBetaRelease assembleBetaUnminifiedRelease assembleBetaDebuggableRelease
+          command: ./gradlew assembleBetaRelease assembleBetaUnminifiedRelease assembleBetaDebuggableRelease assembleBetaDebug
 
       - name: Rename APKs with version
         run: |
