[FEAT] Usage of system wallpaper by default, removed blur and separated wallpaper cause too difficult to handle

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,14 +36,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DragonLauncher"
+        android:theme="@style/DragonLauncherTheme"
         tools:targetApi="33">
 
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="stateAlwaysHidden"
             android:exported="true"
-            android:theme="@style/Theme.DragonLauncher">
+            android:theme="@style/DragonLauncherTheme">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
